--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .navBtn {
+    @apply cursor-pointer hover:text-red-500 duration-200 hover:scale-x-110 lg:hidden;
+  }
+
+  .navMidMenuLarge {
+    @apply hidden lg:inline text-[1.1rem] font-bold cursor-pointer hover:text-slate-300 duration-200;
+  }
+
+  .navRightMenu {
+    @apply bg-red-500 hover:bg-red-700 duration-200 hover:scale-110 py-0.5 px-2 sm:py-1 sm:px-3 rounded-[0.5rem] cursor-pointer;
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
